RESOLVED FIXED258952
Fix internal Apple builds after 265828@main
https://bugs.webkit.org/show_bug.cgi?id=258952
Summary Fix internal Apple builds after 265828@main
Charlie Wolfe
Reported 2023-07-06 16:48:58 PDT
UUID -> WTF::UUID
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-06 16:52:09 PDT
Charlie Wolfe
Comment 2 2023-07-06 16:56:16 PDT
EWS
Comment 3 2023-07-06 16:58:30 PDT
Committed 265830@main (a5fec4a8500e): <https://commits.webkit.org/265830@main> Reviewed commits have been landed. Closing PR #15617 and removing active labels.
Fujii Hironori
Comment 4 2023-07-06 18:11:22 PDT
Thank you.
Note You need to log in before you can comment on or make changes to this bug.